Fix hidden class missing causing new school input to be visible

--- a/css/style.css
+++ b/css/style.css
@@ -545,3 +545,8 @@ ul {
         font-size: 0.95rem;
     }
 }
+
+/* Utilities */
+.hidden {
+    display: none !important;
+}
